--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             
             <p class="mb-4">全面的铜加工生产线涉及多个按顺序工作的专业设备组。采购策略不仅要考虑单个设备的性能，还要考虑它们的集成、自动化水平以及与法规的合规性。</p>
             
-            <p>对于波兰的设施，我们既可以考虑欧洲供应商生态系统，也可以考虑中国成熟的铜加工设备制造商方案，后者可能在成本效益方面具有优势。</p>
+            <p>对于波兰的生产线，我们既可以考虑欧洲供应商生态系统，也可以考虑中国成熟的铜加工设备制造商方案，后者可能在成本效益方面具有优势。</p>
         </section>
 
         <section id="equipment-analysis" class="mb-12">
